[project]
name = "peace-to-blur"
version = "0.1.0"
description = "Blur the camera frame when a peace sign is detected"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python",
    "mediapipe",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
